syntax = "proto2";
package controller;

import "comm/proto/spa.proto";

message AccessList
{
    optional string ip = 1;
    optional int32 udp_port = 2;
    optional int32 tcp_port = 3;
    optional string description = 4;
}

// 用户获取可访问列表、票据
message ConFuncGetAccessReq 
{
}

message ConFuncGetAccessRsp
{
    repeated AccessList list = 1;
    optional SPATicket ticket = 2;
}
