syntax = "proto2";
package gateway;

enum WhiteListOpType 
{
    ListAdd = 1;
    ListDel = 2;
}

// 白名单操作
message GateFuncWhiteListOpReq 
{
    optional int32 op = 1;  // WhiteListOpType
    optional string ip = 2;
}

message GateFuncWhiteListOpRsp 
{

}
